2010-02-17  Ivan Maidanski <ivmai@mail.ru> (really Patrick Marlier)

	* src/atomic_ops/sysdeps/gcc/x86.h (AO_compare_and_swap_full,
	AO_compare_double_and_swap_double_full): Use EAX for the result
	since cmpxchg clobbers it.
	* src/atomic_ops/sysdeps/sunc/x86.h (AO_compare_and_swap_full,
	AO_compare_double_and_swap_double_full): Ditto.
	* src/atomic_ops/sysdeps/gcc/x86_64.h (AO_compare_and_swap_full,
	AO_compare_double_and_swap_double_full): Ditto.
	* src/atomic_ops/sysdeps/sunc/x86_64.h (AO_compare_and_swap_full,
	AO_compare_double_and_swap_double_full): Ditto.

2010-02-04  Ivan Maidanski <ivmai@mail.ru>

	* doc/Makefile.in: Regenerate.

2010-02-04  Ivan Maidanski <ivmai@mail.ru> (really Ian Wienand)

	* doc/Makefile.am: Remove duplicate file in the list.

2010-02-03  Ivan Maidanski <ivmai@mail.ru>

	* ChangeLog: Fix some typos.

2010-02-03  Ivan Maidanski <ivmai@mail.ru>

	* src/atomic_ops_stack.c (AO_stack_push_explicit_aux_release):
	Define "i" variable only if used (to suppress a compiler warning).

2010-02-02  Ivan Maidanski <ivmai@mail.ru>

	* src/atomic_ops/sysdeps/sunc/x86.h (AO_test_and_set_full): Fix
	"xchg" data size (remove "l" suffix).
	* src/atomic_ops/sysdeps/sunc/x86_64.h (AO_test_and_set_full):
	Ditto.
	* src/atomic_ops/sysdeps/sunc/x86_64.h (AO_test_and_set_full): Use
	AO_TS_t for oldval.
	* src/atomic_ops/sysdeps/sunc/x86.h
	(AO_compare_double_and_swap_double_full,
	AO_HAVE_compare_double_and_swap_double_full): Comment out (since
	not tested, might be wrong, and tickles a bug in some Sun CC
	versions; besides, __PIC__ macro is never predefined by Sun CC).

2010-01-29  Ivan Maidanski <ivmai@mail.ru>

	* INSTALL: Regenerate (by autoreconf -vif using libtool-2.2.6b,
	automake-1.11.1, autoconf-2.65).
	* Makefile.in: Ditto.
	* aclocal.m4: Ditto.
	* compile: Ditto.
	* config.guess: Ditto.
	* config.sub: Ditto.
	* configure: Ditto.
	* depcomp: Ditto.
	* install-sh: Ditto.
	* missing: Ditto.
	* mkinstalldirs: Ditto.
	* doc/Makefile.in: Ditto.